--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.6.0",
-    "prisma": "^4.9.0"
+    "postcss": "^8.4.24",
+    "prisma": "^4.9.0",
+    "tailwindcss": "^3.3.2"
   }
 }
