--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "tsx ./prisma/seed.ts"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -26,6 +27,7 @@
     "eslint-config-prettier": "^8.6.0",
     "postcss": "^8.4.24",
     "prisma": "^4.9.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "tsx": "^3.12.7"
   }
 }
