--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "tsx ./prisma/seed.ts"
+    "seed": "tsx ./prisma/seed.ts",
+    "test": ""
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "cypress": "^12.17.0",
     "eslint-config-prettier": "^8.6.0",
     "postcss": "^8.4.24",
     "prisma": "^4.9.0",
