--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,10 @@ name: Cypress Tests
 
 on: [push]
 
+env:
+  DATABASE_URL: ${{ env.DATABASE_URL}}
+  TEST_USER_EMAIL: ${{ TEST_USER_EMAIL }}
+
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
