--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
+    environment: Production
+    concurrency: Production
     steps:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
