--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@ name: Cypress Tests
 
 on: [push]
 
-environment: Preview
-
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    environment: Production
+    concurrency: Production
     steps:
       - name: Checkout
         uses: actions/checkout@v3
