add the environment variables in by hand?

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,9 @@ on:
       - main
 jobs:
   Deploy-Production:
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL}}
+      TEST_USER_EMAIL: ${{ secrets.TEST_USER_EMAIL }}
     runs-on: ubuntu-latest
     environment: Production
     concurrency: Production
