--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "tsx ./prisma/seed.ts"
+    "seed": "tsx ./prisma/seed.ts",
+    "test": "cypress open",
+    "test:headless": "cypress run --headless"
   },
   "dependencies": {
     "@next/font": "13.1.6",
