--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "cypress": "^12.17.0",
+    "daisyui": "^3.5.1",
     "eslint-config-prettier": "^8.6.0",
     "postcss": "^8.4.24",
     "prisma": "^4.9.0",
