--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
     "autoprefixer": "^10.4.14",
     "cypress": "^12.17.0",
     "daisyui": "^4.4.19",
