update ci/cd stuff to use playwright

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - main
 jobs:
-  cypress-run:
+  test:
     env:
       DATABASE_URL: ${{ secrets.TEST_DATABASE_URL}}
       TEST_USER_EMAIL: ${{ secrets.TEST_USER_EMAIL }}
@@ -15,17 +15,19 @@ jobs:
     environment: Production
     concurrency: Production
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v5.5.1 # use the explicit version number
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          build: npm run build
-          start: npm start
+          node-version: 18
+      - name: Install dependencies
+        run: npm i
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: npm run test
+
   Deploy-Production:
-    needs: cypress-run
+    needs: test
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL}}
       TEST_USER_EMAIL: ${{ secrets.TEST_USER_EMAIL }}
