--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
           node-version: 18
       - name: Install dependencies
         run: npm i
+      - name: Run site
+        run: npm run dev
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
