--- a/package.json
+++ b/package.json
@@ -11,22 +11,21 @@
     "test": "npx playwright test"
   },
   "dependencies": {
-    "@next/font": "^13.1.6",
     "@prisma/client": "^4.9.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
     "autoprefixer": "^10.4.14",
     "daisyui": "^4.4.19",
+    "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^8.6.0",
     "postcss": "^8.4.24",
     "prisma": "^4.9.0",
