--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@prisma/client": "^5.8.1",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "next": "^14.0.4",
     "react": "^18.2.0",
@@ -21,6 +20,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
+    "@types/react": "^18.2.55",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vercel/style-guide": "^5.1.0",
