--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.8.1",
     "tailwindcss": "^3.3.2",
-    "tsx": "^3.12.7",
+    "tsx": "4.7.1",
     "typescript": "^5.3.3"
   },
   "engines": {
-    "node": ">=18.17.0"
+    "node": "20.10.0"
   }
 }
