--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "seed": "tsx ./prisma/seed.ts",
-    "test": "NODE_ENV=test npx playwright test"
+    "test": "NODE_ENV=test npx playwright test --project='firefox' --workers=1 --max-failures=1",
+    "test:wk": "NODE_ENV=test npx playwright test --project='webkit' --workers=1 --max-failures=1",
+    "test:chr": "NODE_ENV=test npx playwright test --project='chromium' --workers=1 --max-failures=1"
   },
   "prisma": {
     "seed": "tsx ./prisma/seed.ts"
