--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "seed": "tsx ./prisma/seed.ts"
   },
   "dependencies": {
+    "@lucia-auth/adapter-prisma": "^4.0.0",
     "@prisma/client": "^5.8.1",
     "@types/node": "18.11.18",
     "@types/react-dom": "18.0.10",
+    "lucia": "^3.0.1",
     "next": "^14.0.4",
+    "oslo": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^3.22.4"
