--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "oslo": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
