--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "seed": "tsx ./prisma/seed.ts",
-    "test": "APP_ENV=test npx playwright test --project='firefox' --workers=1 --debug "
+    "test": "npx playwright test --project='firefox' --workers=1"
   },
   "prisma": {
     "seed": "tsx ./prisma/seed.ts"
